--- a/index.html
+++ b/index.html
@@ -41,26 +41,35 @@
           <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
             <div class="@container">
               <div class="@[480px]:p-4">
-                <div
-                  class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-4"
-                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuActsZX3ntVjb6LN4hKm9f35Rg5QOFu6EqTlPZIgJFOjwxREmxUcI599RL9jgxT21wNSlcyQCvxBFrl0-0imogTpWXtFZ29SLFDcaDew4mzD1jSyhdr1o0dowstA55v1oYQeOH_5Hc8enaFa_hHkR5t0L1HEbgHJZWAQuiL6Xpz5RkXxQGqV_srbo-27VZjky3BBY6WzYAdHuXcYZaGVNxhIwWrByJcgPTQCAkryH2P4dOce2zyZI2Tj0ggoXX-xnrefwi284q3y3Y");'
-                >
-                  <div class="flex flex-col gap-2 text-center">
-                    <h1
-                      class="text-white text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]"
-                    >
-                      Welcome to Padel Courts Lolol
-                    </h1>
-                    <h2 class="text-white text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
-                      Experience the thrill of padel in our state-of-the-art courts. Book your game today and join the fun!
-                    </h2>
-                  </div>
-                  <button
-                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 @[480px]:h-12 @[480px]:px-5 bg-[#dce8f3] text-[#101518] text-sm font-bold leading-normal tracking-[0.015em] @[480px]:text-base @[480px]:font-bold @[480px]:leading-normal @[480px]:tracking-[0.015em]"
-                  >
-                    <span class="truncate">Book Now</span>
-                  </button>
-                </div>
+                <div class="relative flex min-h-[480px] flex-col gap-6 @[480px]:gap-8 @[480px]:rounded-xl items-center justify-center p-4 overflow-hidden">
+    <!-- El video va primero para que el contenido lo sobreponga -->
+    <video class="absolute inset-0 w-full h-full object-cover z-0"
+           autoplay
+           loop
+           muted
+           playsinline
+           poster="https://via.placeholder.com/1920x1080.png?text=Cargando+video+de+Padel">
+           <!-- Reemplaza la URL del poster con una imagen real que quieras que se muestre si el video no carga -->
+        <source src="Video_1748030907.mp4" type="video/mp4">
+        <!-- Opcional: Puedes añadir otros formatos para mayor compatibilidad -->
+        <!-- <source src="Video_1748030907.webm" type="video/webm"> -->
+        Tu navegador no soporta el tag de video.
+    </video>
+
+    <!-- El contenido existente (títulos y botón) -->
+    <!-- Añadimos 'relative' y 'z-10' para asegurar que estén por encima del video -->
+    <div class="relative z-10 flex flex-col gap-2 text-center" bis_skin_checked="1">
+        <h1 class="text-white text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]">
+            Welcome to Padel Courts Lolol
+        </h1>
+        <h2 class="text-white text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
+            Experience the thrill of padel in our state-of-the-art courts. Book your game today and join the fun!
+        </h2>
+    </div>
+    <button class="relative z-10 flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 @[480px]:h-12 @[480px]:px-5 bg-[#dce8f3] text-[#101518] text-sm font-bold leading-normal tracking-[0.015em] @[480px]:text-base @[480px]:font-bold @[480px]:leading-normal @[480px]:tracking-[0.015em]">
+        <span class="truncate">Book Now</span>
+    </button>
+</div>
               </div>
             </div>
             <h2 class="text-[#101518] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Our Courts</h2>
