--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
               </div>
             </div>
             <h2 class="text-[#101518] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Location &amp; Contact</h2>
-            <div class="flex px-4 py-3">
-              <div
-                class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl object-cover"
-                style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDhWo3tdoRoRF0b3oU9XmyPZablekG8YPPuvhqFCZzV_QvmY5PJnKY7mN6XpkEt0XnbnA1c54JaFckn4Y5er5mapS2F8I6WPdQNTONhbCCv6vGVDI94lrZioYx02sDv_9OjzgjTgBIBRNnNVHYZ7GfzSs1ryI4lCcfeZScPstEdDGxLFo9cZjUKH166ctDie3hdkRYM2pftpGlcJ2vDdFTP9wVN-BZAgsq6S7z_QlNrd8ryQ-H4kKoD9MUGNmsdUSwIQ3D2n6eWdYg");'
-              ></div>
+            <div class="flex px-4 py-3 justify-center items-center" bis_skin_checked="1">
+                <div class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl object-cover" bis_skin_checked="1">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m8!1m3!1d741.8311769173911!2d-71.67089240510185!3d-34.730380761569286!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d-34.73058025519914!2d-71.6704605694674!5e1!3m2!1ses!2scl!4v1748048268825!5m2!1ses!2scl" width="100%" height="450" style="border:0; display: block; margin: 0 auto;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
             <p class="text-[#101518] text-base font-normal leading-normal pb-3 pt-1 px-4">
               Find us at Lolol, Chile. For inquiries, call us at +56 9 1234 5678 or email us at info@padelcourtslolol.com.
