--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       onload="this.rel='stylesheet'"
       href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Plus+Jakarta+Sans%3Awght%40400%3B500%3B700%3B800"
     />
+    <link rel="stylesheet" href="style.css">
 
     <title>Padel Courts Lolol</title>
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
