--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 ></path>
               </svg>
             </div>
-            <h2 class="text-[#101518] text-lg font-bold leading-tight tracking-[-0.015em]">Padel Courts Lolol</h2>
+            <h2 class="text-[#101518] text-lg font-bold leading-tight tracking-[-0.015em]">Padel Lolol</h2>
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
@@ -252,7 +252,7 @@
                   </div>
                 </a>
               </div>
-              <p class="text-[#5c748a] text-base font-normal leading-normal">© 2024 Padel Courts Lolol. Todos los derechos reservados.</p>
+              <p class="text-[#5c748a] text-base font-normal leading-normal">© 2025 Padel Lolol. Todos los derechos reservados.</p>
             </footer>
           </div>
         </div>
