--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                   </video>
                   <div class="relative z-10 flex flex-col gap-2 text-center" bis_skin_checked="1">
                       <h1 class="text-white text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]">
-                          Bienvenido a Padel Courts Lolol
+                          Bienvenido a Padel Lolol
                       </h1>
                       <h2 class="text-white text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
-                          Experimenta la emoción del pádel en nuestras canchas de última generación. ¡Reserva tu partido hoy y únete a la diversión!
+                          Experimenta la emoción del pádel en nuestras canchas. ¡Reserva tu partido hoy y únete a la diversión!
                       </h2>
                   </div>
                   <button class="relative z-10 flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 @[480px]:h-12 @[480px]:px-5 bg-[#dce8f3] text-[#101518] text-sm font-bold leading-normal tracking-[0.015em] @[480px]:text-base @[480px]:font-bold @[480px]:leading-normal @[480px]:tracking-[0.015em]">
